--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		/* 팝업창 크기에 딱 맞게 내용 정렬 (여백 제거) */
         body {
-			overflow-y: auto
+			overflow-y: auto;
             margin: 0;
             padding: 0;
             font-family: 'Malgun Gothic', sans-serif; /* 깔끔한 폰트 */
@@ -108,6 +108,7 @@
 </body>
 
 </html>
+
 
 
 
