--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="step">
                 <span class="step-title">STEP 1. 서버 시간 측정하기</span>
                 - 주소 입력란에 url을 입력하고 녹색 세모 버튼을 눌러주세요.<br>
-                - 자동으로 서버시간을 측정하여 가장 정확한 시간을 표시합니다.<br>
+                - 측정된 서버시간 중 가장 오차 값이 적은 시간을 표시합니다.<br>
                 <span style="font-size: 12px; color: #666;">*오차범위 10ms이하</span>
             </div>
             <div class="step">
@@ -116,4 +116,5 @@
 
 </body>
 </html>
+
 
