--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@
             
             <p style="font-size: 12px; color: #666;">
                 * 프로그램 버전: v1.0.2<br>
-                * 문의사항: <a target="_blank" href="https://open.kakao.com/o/s3oJ8Wfi">카카오 오픈 챗</a>
+                * 문의/요청/제안: <a target="_blank" href="https://open.kakao.com/o/s3oJ8Wfi">카카오 오픈 챗</a>
             </p>
         </div>
     </div>
 
 </body>
 </html>
+
 
 
