--- a/guide.html
+++ b/guide.html
@@ -157,14 +157,27 @@
         </header>
 
         <main>
-            <section id="home">
-                <h1>Server Clock 소개</h1>
-                <p>Server Clock은 복잡한 네트워크 환경에서도 가장 오차 없는 정확한 서버 시간을 제공하기 위해 개발된 전문 측정 도구입니다.</p>
-                
-                <h2>Server Clock이 정교한 이유</h2>
-                <p>자체 개발한 최적화 알고리즘을 통해 네트워크 지연을 최소화하고, 다중 NTP 서버 검증을 거쳐 10ms 이하의 오차 범위를 실현했습니다. 티켓팅, 수강신청 등 0.1초가 중요한 순간에 가장 신뢰할 수 있습니다.</p>
-            </section>
-        </main>
+        <h1 style="text-align: center; border: none; margin-bottom: 25px;">📖 프로그램 사용 방법</h1>
+        
+        <div style="margin-bottom: 20px;">
+            <strong style="color: #007bff; display: block; margin-bottom: 5px;">STEP 1. 서버 시간 측정하기</strong>
+            <p style="margin: 0; padding-left: 10px;">- 주소 입력란에 url을 입력하고 녹색 세모 버튼을 눌러주세요.</p>
+            <p style="margin: 0; padding-left: 10px;">- 측정된 서버시간 중 가장 오차 값이 적은 시간을 표시합니다.</p>
+            <span style="font-size: 12px; color: #666; padding-left: 10px;">*오차범위 10ms이하</span>
+        </div>
+
+        <div style="margin-bottom: 20px;">
+            <strong style="color: #007bff; display: block; margin-bottom: 5px;">STEP 2. 기준 서버 설정하기</strong>
+            <p style="margin: 0; padding-left: 10px;">- 시간차 항목을 클릭하면 해당 서버가 기준이 되며, 다른 서버에서 기준서버와의 시간차가 표시됩니다.</p>
+            <span style="font-size: 12px; color: #666; padding-left: 10px;">*디폴트 서버=표준시(KRISS based)</span>
+        </div>
+
+        <div style="margin-bottom: 20px;">
+            <strong style="color: #007bff; display: block; margin-bottom: 5px;">STEP 3. PC와 동기화 하기</strong>
+            <p style="margin: 0; padding-left: 10px;">- 측정된 표준시/서버시간을 PC와 동기화 하려면 오른쪽 동기화 버튼을 눌러주세요.</p>
+            <p style="margin: 0; padding-left: 10px;">- 수동으로 PC시간을 조절하려면 오프셋을 활용하세요!</p>
+        </div>
+    </main>
 
         <footer>
             <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버 클럭 사이트입니다.</div>
