--- a/principle.html
+++ b/principle.html
@@ -157,14 +157,17 @@
         </header>
 
         <main>
-            <section id="home">
-                <h1>Server Clock 소개</h1>
-                <p>Server Clock은 복잡한 네트워크 환경에서도 가장 오차 없는 정확한 서버 시간을 제공하기 위해 개발된 전문 측정 도구입니다.</p>
-                
-                <h2>Server Clock이 정교한 이유</h2>
-                <p>자체 개발한 최적화 알고리즘을 통해 네트워크 지연을 최소화하고, 다중 NTP 서버 검증을 거쳐 10ms 이하의 오차 범위를 실현했습니다. 티켓팅, 수강신청 등 0.1초가 중요한 순간에 가장 신뢰할 수 있습니다.</p>
-            </section>
-        </main>
+        <h1>서버시간 측정원리</h1>
+        
+        <h2>NTP 서버란 무엇인가?</h2>
+        <p>NTP(Network Time Protocol)는 인터넷 상의 기기 간 시간을 동기화하기 위한 표준 프로토콜입니다. 인터넷을 통해 밀리초 단위의 정확한 표준시를 제공합니다.</p>
+
+        <h2>타 서버시간 측정 사이트의 오차 원인</h2>
+        <p>많은 시간 측정 사이트들이 웹 브라우저의 한계나 사용자의 인터넷 회선 속도에 따른 지연(Latency)을 보정하지 못합니다. 왕복 시간(RTT)을 정밀하게 계산하지 않으면 치명적인 오차가 발생합니다.</p>
+
+        <h2>Server Clock이 정교한 이유</h2>
+        <p>저희는 네트워크 지연 시간을 정밀하게 측정하고 보정하는 고유의 알고리즘을 사용합니다. 다중 요청을 통해 최적의 응답값을 선별하여, 실제 서버의 시간에 가장 근접한 완벽한 결과값을 도출합니다.</p>
+	</main>
 
         <footer>
             <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버 클럭 사이트입니다.</div>
