--- a/privacy.html
+++ b/privacy.html
@@ -157,14 +157,18 @@
         </header>
 
         <main>
-            <section id="home">
-                <h1>Server Clock 소개</h1>
-                <p>Server Clock은 복잡한 네트워크 환경에서도 가장 오차 없는 정확한 서버 시간을 제공하기 위해 개발된 전문 측정 도구입니다.</p>
-                
-                <h2>Server Clock이 정교한 이유</h2>
-                <p>자체 개발한 최적화 알고리즘을 통해 네트워크 지연을 최소화하고, 다중 NTP 서버 검증을 거쳐 10ms 이하의 오차 범위를 실현했습니다. 티켓팅, 수강신청 등 0.1초가 중요한 순간에 가장 신뢰할 수 있습니다.</p>
-            </section>
-        </main>
+        <h1>개인정보처리방침</h1>
+
+        <h2>1. 쿠키(Cookie) 사용 안내</h2>
+        <p>본 사이트는 사용자의 편의 향상 및 통계 분석을 위해 쿠키를 사용합니다. 브라우저 설정을 통해 쿠키 저장을 거부하실 수 있습니다.</p>
+
+        <h2>2. 제3자 광고주 및 구글 애드센스</h2>
+        <p>본 사이트는 구글(Google)을 포함한 제3자 업체의 광고를 게재합니다.</p>
+        <ul style="padding-left: 20px;">
+            <li>구글 등 제3자 제공업체는 사용자의 이전 방문 기록을 바탕으로 광고를 게재하기 위해 <b>Google DART 쿠키</b>를 사용합니다.</li>
+            <li>사용자는 <a href="https://www.google.com/settings/ads" target="_blank" style="color: blue; text-decoration: underline;">구글 광고 설정</a> 페이지를 방문하여 맞춤설정 광고 게재(DART 쿠키 사용)를 거부할 수 있습니다.</li>
+        </ul>
+	</main>
 
         <footer>
             <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버 클럭 사이트입니다.</div>
