--- a/terms.html
+++ b/terms.html
@@ -156,15 +156,17 @@
             <button class="menu-btn" onclick="toggleNav()">☰</button>
         </header>
 
-        <main>
-            <section id="home">
-                <h1>Server Clock 소개</h1>
-                <p>Server Clock은 복잡한 네트워크 환경에서도 가장 오차 없는 정확한 서버 시간을 제공하기 위해 개발된 전문 측정 도구입니다.</p>
-                
-                <h2>Server Clock이 정교한 이유</h2>
-                <p>자체 개발한 최적화 알고리즘을 통해 네트워크 지연을 최소화하고, 다중 NTP 서버 검증을 거쳐 10ms 이하의 오차 범위를 실현했습니다. 티켓팅, 수강신청 등 0.1초가 중요한 순간에 가장 신뢰할 수 있습니다.</p>
-            </section>
-        </main>
+	<main>
+        <h1>이용약관</h1>
+        <p>본 약관은 server-clock.site(이하 "사이트")가 제공하는 서비스의 이용 조건을 규정합니다.</p>
+
+        <h2>1. 서비스 이용 및 면책 조항</h2>
+        <p>본 서비스가 제공하는 서버 시간은 네트워크 상태에 따라 오차가 발생할 수 있으며, 사이트는 제공된 정보의 완벽한 정확성이나 특정 목적(티켓팅 등)의 성공을 보장하지 않습니다.</p>
+
+        <h2>2. 합법적 용도로만의 사용</h2>
+        <p style="color: #d9534f; font-weight: bold;">본 사이트 및 제공되는 프로그램은 합법적인 용도로만 사용이 허가됩니다.</p>
+        <p>불법적인 매크로나 디도스(DDoS) 형태의 과도한 트래픽 유발 등 서버 업무를 방해하는 행위를 엄격히 금지하며, 적발 시 모든 법적 책임은 이용자에게 있습니다.</p>
+	</main>
 
         <footer>
             <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버 클럭 사이트입니다.</div>
