--- a/contact.html
+++ b/contact.html
@@ -162,7 +162,7 @@
         
 	        <div style="background-color: #f8f9fa; padding: 20px; border-radius: 8px; margin-top: 20px; border: 1px solid #ddd;">
 	            <h3 style="margin-bottom: 5px; font-size: 1rem;">📧 이메일 문의</h3>
-	            <p style="margin-bottom: 15px;"><a href="mailto:parkleon0107@gmail.com" style="color: #007bff;">support@server-clock.site</a></p>
+	            <p style="margin-bottom: 15px;"><a href="mailto:parkleon0107@gmail.com" style="color: #007bff;">parkleon0107@gmail.com</a></p>
             
 	            <h3 style="margin-bottom: 5px; font-size: 1rem;">💬 카카오톡 오픈채팅</h3>
 	            <p><a href="https://open.kakao.com/o/s3oJ8Wfi" target="_blank" style="color: #3b1e1e; font-weight: bold; text-decoration: underline;">오픈채팅방 바로가기</a></p>
@@ -201,3 +201,4 @@
 </body>
 
 </html>
+
