--- a/download.html
+++ b/download.html
@@ -184,7 +184,7 @@
 </main>
 
         <footer>
-            <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버 클락 사이트입니다.</div>
+            <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버 클락입니다.</div>
             <div class="footer-links">
                 <a href="terms.html">이용약관</a> | 
                 <a href="privacy.html">개인정보처리방침</a> | 
@@ -215,3 +215,4 @@
 </body>
 
 </html>
+
