--- a/terms.html
+++ b/terms.html
@@ -158,10 +158,10 @@
 
 	<main>
         <h1>이용약관</h1>
-        <p>본 약관은 server-clock.site(이하 "사이트")가 제공하는 서비스의 이용 조건을 규정합니다.</p>
+        <p>본 약관은 server-clock(서버클락)이 제공하는 서비스의 이용 조건을 규정합니다.</p>
 
         <h2>1. 서비스 이용 및 면책 조항</h2>
-        <p>본 서비스가 제공하는 서버 시간은 네트워크 상태에 따라 오차가 발생할 수 있으며, 사이트는 제공된 정보의 완벽한 정확성이나 특정 목적(티켓팅 등)의 성공을 보장하지 않습니다.</p>
+        <p>본 서비스가 제공하는 서버 시간은 네트워크 상태에 따라 오차가 발생할 수 있으며, server-clock은 제공된 정보의 완벽한 정확성이나 특정 목적(티켓팅 등)의 성공을 보장하지 않습니다.</p>
 
         <h2>2. 합법적 용도로만의 사용</h2>
         <p style="color: #d9534f; font-weight: bold;">본 사이트 및 제공되는 프로그램은 합법적인 용도로만 사용이 허가됩니다.</p>
@@ -169,7 +169,7 @@
 	</main>
 
         <footer>
-            <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버 클락입니다.</div>
+            <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버클락 공식 사이트입니다.</div>
             <div class="footer-links">
                 <a href="terms.html">이용약관</a> | 
                 <a href="privacy.html">개인정보처리방침</a> | 
@@ -200,3 +200,4 @@
 </body>
 
 </html>
+
