--- a/privacy.html
+++ b/privacy.html
@@ -171,7 +171,7 @@
 	</main>
 
         <footer>
-            <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버 클럭 사이트입니다.</div>
+            <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버클락 공식 사이트입니다.</div>
             <div class="footer-links">
                 <a href="terms.html">이용약관</a> | 
                 <a href="privacy.html">개인정보처리방침</a> | 
@@ -200,4 +200,5 @@
 </script>
 
 </body>
+
 </html>
