--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
 
         <main>
 	        <h1>문의사항</h1>
-	        <p>서비스 이용 중 궁금한 점이나 제휴 문의는 아래 채널로 연락해 주세요.</p>
+	        <p>서비스 이용 중 궁금한 점이나 엡데이트 요청/제휴 문의는 아래 채널로 연락해 주세요.</p>
         
 	        <div style="background-color: #f8f9fa; padding: 20px; border-radius: 8px; margin-top: 20px; border: 1px solid #ddd;">
 	            <h3 style="margin-bottom: 5px; font-size: 1rem;">📧 이메일 문의</h3>
@@ -170,7 +170,7 @@
 	</main>
 
         <footer>
-            <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버 클럭 사이트입니다.</div>
+            <div class="footer-desc">가장 정확한 서버 시간을 측정하는 서버클락 공식 사이트입니다.</div>
             <div class="footer-links">
                 <a href="terms.html">이용약관</a> | 
                 <a href="privacy.html">개인정보처리방침</a> | 
@@ -201,4 +201,5 @@
 </body>
 
 </html>
+
 
