--- a/download.html
+++ b/download.html
@@ -60,7 +60,7 @@
 
         /* 콘텐츠 영역 */
         main { padding: 30px 20px; flex-grow: 1; }
-        section { margin-bottom: 40px; }
+        section { margin-bottom: 20px; }
         h1 { font-size: 1.4rem; margin-bottom: 20px; color: #222; border-bottom: 2px solid #007bff; padding-bottom: 8px; display: inline-block; }
         h2 { font-size: 1.1rem; margin: 25px 0 10px; color: #444; }
         p { font-size: 0.95rem; margin-bottom: 10px; }
@@ -161,9 +161,9 @@
         <h1>다운로드 (Download)</h1>
         <p>가장 정확한 서버 시간 측정 및 동기화를 위한 Server Clock PC 클라이언트 프로그램을 제공합니다.</p>
         
-        <div style="background-color: #f8f9fa; padding: 25px; border-radius: 8px; margin-top: 20px; border: 1px solid #ddd; text-align: center;">
+        <div style="background-color: #f8f9fa; padding: 10px 25px; border-radius: 8px; margin-top: 20px; border: 1px solid #ddd; text-align: center;">
             <p style="font-weight: bold; color: #2c3e50; font-size: 1.1rem; margin-bottom: 10px;">Server Clock v1.0.2</p>
-            <p style="font-weight: bold; color: #d9534f; margin-bottom: 20px;">🛡️ 글로벌 개발자 플랫폼 GitHub를 통해 안전하게 배포됩니다.</p>
+            <p style="font-weight: bold; color: #d9534f; margin-bottom: 10px;">🛡️ 글로벌 개발자 플랫폼 GitHub를 통해 안전하게 배포됩니다.</p>
             
             <a href="https://github.com/solejedi/server-clock-download/releases/latest" target="_blank" style="display: inline-block; background-color: #24292e; color: #fff; padding: 12px 30px; border-radius: 5px; font-weight: bold; font-size: 1.1rem; transition: background 0.2s;">
                 <svg height="20" width="20" viewBox="0 0 16 16" style="fill: white; vertical-align: text-bottom; margin-right: 5px;"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
@@ -173,9 +173,9 @@
             <p style="font-size: 13px; color: #666; margin-top: 15px;">지원 OS: Windows 10 / 11 (64-bit 권장)</p>
         </div>
 
-        <h2 style="margin-top: 40px; border-bottom: 1px solid #eee; padding-bottom: 10px;">설치 및 실행 안내</h2>
+        <h2 style="margin-top: 20px; border-bottom: 1px solid #eee; padding-bottom: 10px;">설치 및 실행 안내</h2>
         <ul style="padding-left: 20px; line-height: 1.8; color: #444;">
-            <li>위 버튼을 클릭하여 GitHub 배포 페이지로 이동합니다.</li>
+            <li>위 링크에서 GitHub 배포 페이지로 이동합니다.</li>
             <li><strong>Assets</strong> 항목에서 최신 버전의 <code style="background-color:#eee; padding:2px 5px; border-radius:3px;">.zip</code> 또는 <code style="background-color:#eee; padding:2px 5px; border-radius:3px;">.exe</code> 파일을 클릭하여 다운로드합니다.</li>
             <li>다운로드한 파일의 압축을 해제한 후 프로그램을 실행합니다.</li>
             <li>별도의 복잡한 설치 과정 없이 즉시 서버 시간 측정이 가능합니다.</li>
@@ -215,5 +215,6 @@
 </body>
 
 </html>
+
 
 
