--- a/principle.html
+++ b/principle.html
@@ -163,8 +163,7 @@
         <p>NTP(Network Time Protocol)는 인터넷 상의 기기 간 시간을 동기화하기 위한 표준 프로토콜입니다. 인터넷을 통해 밀리초 단위의 정확한 표준시를 제공합니다.</p>
 
         <h2>타 서버시간 측정 사이트의 오차 원인</h2>
-        <p>많은 이용자가 신뢰하는 서버 시간 측정 사이트들은 네트워크 회선 속도에 따른 지연 시간(Latency)을 보정하지 못한 채 이미 과거의 정보를 화면에 표시해버리고 맙니다.<br>
-또한, 대부분의 사이트는 밀리초(ms) 단위를 생략한 채 초 단위로만 시간을 갱신하고있어, 사용자는 무려 999ms에 달하는 오차를 떠안게 됩니다.</p>
+        <p>대부분의 서버 시간 측정 사이트들은 네트워크 회선 속도에 따른 지연 시간(Latency)을 보정하지 못한 채 이미 과거의 정보를 화면에 표시하고 있으며, 밀리초(ms) 단위를 생략한 채 초 단위로만 시간을 갱신하고있어, 사용자는 무려 999ms에 달하는 오차를 떠안게 됩니다.</p>
         <h2>Server Clock이 정교한 이유</h2>
         <p>서버클락은 네트워크 지연 시간을 정밀하게 측정하고 보정하는 고유의 알고리즘을 사용합니다. 다중 서버 측정을 통해 최적의 응답값을 선별하여, 실제 서버의 시간에 가장 근접한 완벽한 결과값을 도출합니다.</p>
 	</main>
@@ -201,3 +200,4 @@
 </body>
 
 </html>
+
