--- a/guide.html
+++ b/guide.html
@@ -161,8 +161,8 @@
         
         <div style="margin-bottom: 20px;">
             <strong style="color: #007bff; display: block; margin-bottom: 5px;">STEP 1. 서버 시간 측정하기</strong>
-            <p style="margin: 0; padding-left: 10px;">- 주소 입력란에 url을 입력하고 녹색 세모 버튼을 눌러주세요.</p>
-            <p style="margin: 0; padding-left: 10px;">- 측정된 서버시간 중 가장 오차 값이 적은 시간을 표시합니다.</p>
+            <p style="margin: 0; padding-left: 10px;">- 서버주소란에 url을 입력하고 녹색 세모 버튼을 눌러주세요.</p>
+            <p style="margin: 0; padding-left: 10px;">- 측정된 서버시간 중 오차값이 가장 적은 시간을 표시합니다.</p>
             <span style="font-size: 12px; color: #666; padding-left: 10px;">*오차범위 10ms이하</span>
         </div>
 
@@ -211,5 +211,6 @@
 </body>
 
 </html>
+
 
 
